--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,40 +3,6 @@ body {
 	padding: 0;
 }
 
-#nav {
-	height: 80px;
-	background-color: black;
-	color: lightgray;
-}
-
-#nav-top-logo {
-	font-size: 2em;
-	float: left;
-	margin: 5px;
-	padding: 10px;
-}
-
-#nav-top-login {
-	float: right;
-	margin: 5px;
-	padding: 10px;
-}
-
-#nav-bot {
-	display: flex;
-	justify-content: space-evenly;
-}
-
-.nav-bot-menu {
-	margin: 15px 10px 0px 10px;
-	padding: 15px 15px 15px 15px;
-}
-
-.nav-bot-menu:hover {
-	background-color: gray;
-	color: black;
-}
-
 .explore-img {
 	max-height: 22vh;
 }
@@ -69,6 +35,10 @@ footer {
 
 #top-btn:hover {
 	cursor: pointer;
+}
+
+.nav-link.active {
+	border: 1px solid #0dcaf0;
 }
 
 .carousel {
