added confirm and cancel buttons to account deletion

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,3 +57,12 @@ footer {
 #search-results {
 	display: none;
 }
+
+#confirm {
+	display: none;
+	margin-top: 20px;
+}
+
+#cancel-btn {
+	margin-left: 20px;
+}
